<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_dashboard">

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.example.bookkeeper.ui.fragment.DashboardFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_dashboard"/>

    <fragment
            android:id="@+id/navigation_diary"
            android:name="com.example.bookkeeper.ui.fragment.DiaryFragment"
            android:label="@string/title_diary"
            tools:layout="@layout/fragment_diary"/>

    <fragment
            android:id="@+id/navigation_diary_edit"
            android:name="com.example.bookkeeper.ui.fragment.DiaryEditFragment"
            android:label="@string/title_diary_edit"
            tools:layout="@layout/fragment_diary_edit"/>

    <fragment
            android:id="@+id/navigation_diary_detail"
            android:name="com.example.bookkeeper.ui.fragment.DiaryDetailFragment"
            android:label="@string/title_diary_detail"
            tools:layout="@layout/fragment_diary_detail"/>

    <fragment
            android:id="@+id/navigation_contact"
            android:name="com.example.bookkeeper.ui.fragment.ContactFragment"
            android:label="@string/title_contact"
            tools:layout="@layout/fragment_contact"/>

    <fragment
            android:id="@+id/navigation_contact_detail"
            android:name="com.example.bookkeeper.ui.fragment.ContactDetailFragment"
            android:label="@string/title_contact_detail"
            tools:layout="@layout/fragment_contact_detail"/>

    <fragment
            android:id="@+id/navigation_contact_manage"
            android:name="com.example.bookkeeper.ui.fragment.ContactManageFragment"
            android:label="@string/title_contact"
            tools:layout="@layout/fragment_contact"/>

    <fragment
            android:id="@+id/navigation_contact_manage_edit"
            android:name="com.example.bookkeeper.ui.fragment.ContactManageEditFragment"
            android:label="@string/title_contact_edit"
            tools:layout="@layout/fragment_contact_manage_edit"/>

    <fragment
            android:id="@+id/navigation_profile"
            android:name="com.example.bookkeeper.ui.fragment.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile"/>

    <fragment
            android:id="@+id/navigation_rule_manage"
            android:name="com.example.bookkeeper.ui.fragment.RuleManageFragment"
            android:label="@string/title_rule"
            tools:layout="@layout/fragment_rule_manage"/>
</navigation>