<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/diary_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.DiaryFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/common_page_bg"
            android:paddingBottom="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/diary_query_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/diary_date_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/diary_key_gap"
                    android:text="@string/common_date_select"
                    android:textColor="@color/common_text_primary"
                    android:textSize="16sp"
                    app:icon="@android:drawable/ic_menu_my_calendar"
                    app:iconGravity="start"
                    app:iconTint="@color/common_text_secondary"
                    app:strokeColor="@color/common_text_secondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/diary_account_text"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/diary_account_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="70dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/diary_key_gap"
                    android:text="@string/diary_select"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/diary_area_text">
                <AutoCompleteTextView
                        android:id="@+id/diary_account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:hint="@string/diary_account_label"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/diary_area_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="70dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/diary_key_gap"
                    android:text="@string/diary_select"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                <AutoCompleteTextView
                        android:id="@+id/diary_area"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:hint="@string/diary_area_label"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/diary_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:divider="@android:color/transparent"
                android:dividerHeight="@dimen/common_item_spacing"
                android:paddingTop="8dp"
                android:paddingBottom="88dp"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/diary_query_wrapper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/diary_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:text="@string/diary_empty"
                android:textColor="@color/common_text_secondary"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/diary_query_wrapper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="visible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/diary_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/diary_add"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@android:drawable/ic_input_add"
                app:tint="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
